--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
   "devDependencies": {
     "bower": "^1.3.12",
     "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-connect": "^0.9.0",
+    "grunt-contrib-copy": "^0.8.0",
+    "grunt-contrib-htmlmin": "^0.4.0",
+    "grunt-contrib-imagemin": "^0.9.3",
     "grunt-contrib-less": "^1.0.0",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-uglify": "^0.8.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-processhtml": "^0.3.7",
+    "less-plugin-autoprefix": "^1.3.0",
+    "less-plugin-clean-css": "^1.5.0"
   }
 }
